# lifefence-backend

./: .env.example  DB Schemas.canvas  Dockerfile  README.md  dockerfile  pyproject.toml
.github/workflows/: docker-image.yml
app/: config.py  main.py
app/api/routes/: __init__.py  actions.py  auth.py  expense.py  group.py  group_task.py  location.py  task.py  todo.py  user.py
app/models/: __init__.py  actions.py  expense.py  group.py  group_task.py  location.py  task.py  user.py
app/utils/: auth.py
