[tool.poetry]
name = "lifefence-backend"
version = "0.1.0"
description = "This is the backend for the LifeFence application developed as part of a college assignment"
authors = ["KreativeThinker <sagely2005eagle@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.31.0"
tortoise-orm = "^0.21.6"
python-dotenv = "^1.0.1"
jwt = "^1.3.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
googlemaps = "^4.10.0"
pydantic = {extras = ["email"], version = "^2.9.2"}

[tool.poetry.group.dev.dependencies]
fastapi = "^0.115.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
